docs: PureComponent 探索

--- a/BasicSkill/从0到1实现React/7.PureComponent.md
+++ b/BasicSkill/从0到1实现React/7.PureComponent.md
@@ -2,9 +2,142 @@
 
 使用 PureComponent 是优化 React 性能的一种常用手段，相较于 Component, PureComponent 会在 render 之前自动执行一次 shouldComponentUpdate() 函数，根据返回的 bool 值判断是否进行 render。其中有个重点是 PureComponent 在 shouldComponentUpdate() 的时候会进行 shallowEqual(浅比较)。
 
-PureComponent 的浅比较策略如下：
+PureComponent 的浅比较策略如下：(个人理解可能有误)
 
-未完后续。。。
+针对 state(引用没变):
+
+1.数据未发生改变(浅比较)，render 方法不会触发；
+2.数据发生改变，render 方法会触发;
+
+针对 props，在如上的基础上，再加下一条
+
+1.引用发生改变，render 方法会触发
+
+> 在探索实践过程中，笔者得出结论：setState({}) 是改变不了 state 的引用地址的，纪念下在 React 上提的第一个 [issue](https://github.com/facebook/react/issues/13438#issuecomment-414128918)，后续测试用例就跑这个 issue 中给出的用例了。
 
 #### PureComponent 的实现
 
+照着上述思路我们来实现 PureComponent 的逻辑
+
+```js
+function PureComponent(props) {
+  this.props = props
+  this.state = this.state || {}
+}
+
+PureComponent.prototype.setState = function (updater, cb) {
+  const cpState = this.state // this 指向当前组件的实例
+  this.shouldComponentUpdate = function (nextProps, nextState) { // 这段就是 PureComponent 的核心了
+    if (shallowEqual(cpState, nextState)) {
+      return false // 浅比较相等的话，不渲染
+    } else {
+      return true  // 浅比较不等的话，渲染
+    }
+  }
+  asyncRender(updater, this, cb) // 同 Component 中的代码，这里就省略了
+}
+
+// 浅比较逻辑
+const shallowEqual = function(oldState, nextState) {
+  const oldKeys = Object.keys(oldState)
+  const newKeys = Object.keys(nextState)
+
+  if (oldKeys.length !== newKeys.length) {
+    return false
+  }
+
+  let flag = true
+  for (let i = 0; i < oldKeys.length; i++) {
+    if (!nextState.hasOwnProperty(oldKeys[i])) {
+      flag = false
+      break
+    }
+
+    if (nextState[oldKeys[i]] !== oldState[oldKeys[i]]) {
+      flag = false
+      break
+    }
+  }
+
+  return flag
+}
+```
+
+#### 测试用例
+
+测试用例用 [issue](https://github.com/facebook/react/issues/13438#issuecomment-414128918) 中的案例，我们期望点击增加按钮后，页面上显示的值能够加 1。
+
+```js
+class B extends PureComponent {
+  constructor(props) {
+    super(props)
+    this.state = {
+      count: 0
+    }
+    this.click = this.click.bind(this)
+  }
+
+  click() {
+    this.setState({
+      count: ++this.state.count,
+    })
+  }
+
+  render() {
+    return (
+      <div>
+        <button onClick={this.click}>增加</button>
+        <div>{this.state.count}</div>
+      </div>
+    )
+  }
+}
+```
+
+然而，我们点击上述代码，页面上显示的 0 分毫不动！！！
+
+揭秘如下：
+
+```js
+click() {
+  const t = ++this.state.count
+  console.log(t === this.state.count) // true
+  this.setState({
+    count: t,
+  })
+}
+```
+
+当点击增加按钮，控制台显示 `t === this.state.count` 为 true, 也就说明了 setState 前后的状态是统一的，所以 shallowEqual(浅比较) 返回的是 true，致使 shouldComponentUpdate 返回了 false，页面因此没有渲染。
+
+类似的，如下写法也是达不到目标的，留给读者思考了。
+
+```js
+click() {
+  this.setState({
+    count: this.state.count++,
+  })
+}
+```
+
+那么如何达到我们期望的目标呢。揭秘如下：
+
+```js
+click() {
+  this.setState({
+    count: this.state.count + 1
+  })
+}
+```
+
+感悟：小小的一行代码里蕴藏着无数的 bug。
+
+#### PureComponent 实战踩坑之旅
+
+愉快的开启 PureComponent 之旅，未完待续
+
+#### 相关链接
+
+* [A doubt behaviour using the PureComponent](https://github.com/facebook/react/issues/13438)
+* [React 的性能优化（一）当 PureComponent 遇上 ImmutableJS](https://juejin.im/post/59cdaaccf265da066f6ac83b)
+* [React性能优化方案之PureComponent](https://juejin.im/post/5b1caceb5188257d63226743)
