--- a/BasicSkill/从0到1实现React/7.PureComponent.md
+++ b/BasicSkill/从0到1实现React/7.PureComponent.md
@@ -2,18 +2,12 @@
 
 使用 PureComponent 是优化 React 性能的一种常用手段，相较于 Component, PureComponent 会在 render 之前自动执行一次 shouldComponentUpdate() 函数，根据返回的 bool 值判断是否进行 render。其中有个重点是 PureComponent 在 shouldComponentUpdate() 的时候会进行 shallowEqual(浅比较)。
 
-PureComponent 的浅比较策略如下：(个人理解可能有误)
+PureComponent 的浅比较策略如下：
 
-针对 state(引用没变):
+对 prevState/nextState 以及 prevProps/nextProps 这两组数据进行浅比较：
 
-1.数据未发生改变(浅比较)，render 方法不会触发；
-2.数据发生改变，render 方法会触发;
-
-针对 props，在如上的基础上，再加下一条
-
-1.引用发生改变，render 方法会触发
-
-> 在探索实践过程中，笔者得出结论：setState({}) 是改变不了 state 的引用地址的，纪念下在 React 上提的第一个 [issue](https://github.com/facebook/react/issues/13438#issuecomment-414128918)，后续测试用例就跑这个 issue 中给出的用例了。
+1.对象第一层数据未发生改变，render 方法不会触发；
+2.对象第一层数据发生改变(包括第一层数据引用的改变)，render 方法会触发;
 
 #### PureComponent 的实现
 
@@ -21,20 +15,27 @@ PureComponent 的浅比较策略如下：(个人理解可能有误)
 
 ```js
 function PureComponent(props) {
-  this.props = props
-  this.state = this.state || {}
+  this.props = props || {}
+  this.state = {}
+
+  isShouldComponentUpdate.call(this) // 为每个 PureComponent 绑定 shouldComponentUpdate 方法
 }
 
-PureComponent.prototype.setState = function (updater, cb) {
-  const cpState = this.state // this 指向当前组件的实例
-  this.shouldComponentUpdate = function (nextProps, nextState) { // 这段就是 PureComponent 的核心了
-    if (shallowEqual(cpState, nextState)) {
-      return false // 浅比较相等的话，不渲染
+PureComponent.prototype.setState = function(updater, cb) {
+  isShouldComponentUpdate.call(this) // 调用 setState 时，让 this 指向子类的实例，目的取到子类的 this.state
+  asyncRender(updater, this, cb)
+}
+
+function isShouldComponentUpdate() {
+  const cpState = this.state
+  const cpProps = this.props
+  this.shouldComponentUpdate = function (nextProps, nextState) {
+    if (!shallowEqual(cpState, nextState) || !shallowEqual(cpProps, nextProps)) {
+      return true  // 只要 state 或 props 浅比较不等的话，就进行渲染
     } else {
-      return true  // 浅比较不等的话，渲染
+      return false // 浅比较相等的话，不渲染
     }
   }
-  asyncRender(updater, this, cb) // 同 Component 中的代码，这里就省略了
 }
 
 // 浅比较逻辑
@@ -65,7 +66,7 @@ const shallowEqual = function(oldState, nextState) {
 
 #### 测试用例
 
-测试用例用 [issue](https://github.com/facebook/react/issues/13438#issuecomment-414128918) 中的案例，我们期望点击增加按钮后，页面上显示的值能够加 1。
+测试用例用 在 React 上提的一个 [issue](https://github.com/facebook/react/issues/13438#issuecomment-414128918) 中的案例，我们期望点击增加按钮后，页面上显示的值能够加 1。
 
 ```js
 class B extends PureComponent {
@@ -131,10 +132,6 @@ click() {
 ```
 
 感悟：小小的一行代码里蕴藏着无数的 bug。
-
-#### PureComponent 实战踩坑之旅
-
-愉快的开启 PureComponent 之旅，未完待续
 
 #### 相关链接
 
