docs: ES6继承与ES5继承的差异

--- a/BasicSkill/readES6/继承.md
+++ b/BasicSkill/readES6/继承.md
@@ -1,4 +1,99 @@
-ES5 和 ES6 的继承还是存在一定差异的，日后会做一番比较
+### ES5 之继承
+
+* 构造函数继承：缺点是只能继承父类函数的方法和属性，而不能继承原型对象的方法和属性
+
+* 原型链继承：缺点是当在一个子类的实例上修改父类的属性和方法时，其它的子类也会受到影响。
+
+* 组合继承：优点是解决上述两个缺点，缺点是父类方法调用了两次，而且不能判断实例的构造函数是子类还是父类
+
+* 组合继承优化一：优点是解决了调用两次的问题，但是还存在一个缺点：不能判断实例的构造函数是子类还是父类
+
+* 组合继承优化二：解决了不能判断实例的构造函数是子类还是父类的问题
+
+```js
+// ①构造函数继承
+function Parent1() {
+  this.parent1 = 'parent1'
+  this.arr = [1, 2, 3]
+}
+
+Parent1.prototype.walk = 'I can walk' // 这里的 walk 子类就获取不到
+
+function Child1() {
+  Parent1.call(this) // 将父级函数的 this 指向子构造函数上去
+  this.child1 = 'child1'
+}
+
+const child11 = new Child1()
+const child12 = new Child1()
+
+// ②原型链继承
+function Parent2() {
+  this.parent2 = 'parent2'
+  this.arr = [1, 2, 3]
+}
+
+Parent2.prototype.walk = 'I can walk'
+
+function Child2() {
+  this.child2 = 'child2'
+}
+
+Child2.prototype = new Parent2()
+
+const child21 = new Child2()
+const child22 = new Child2()
+
+// ③组合继承
+function Parent3() {
+  this.parent3 = 'parent3'
+  this.arr = [1, 2, 3]
+}
+
+function Child3() {
+  Parent3.call(this)  // 这里执行第一次父类
+  this.child3 = 'child3'
+}
+
+ Child3.prototype = new Parent3() // 这里执行第二次父类，原型继承发现只要把父子的原型对象绑定起来就好，可以写成 Child3.prototype = new Parent3()>__proto__ 也正常
+const child31 = new Child3()
+const child32 = new Child3()
+
+// ④组合继承优化一
+function Parent4() {
+  this.parent4 = 'parent4'
+  this.arr = [1, 2, 3]
+}
+
+function Child4() {
+  Parent4.call(this)
+  this.child4 = 'child4'
+}
+
+Child4.prototype = Parent4.prototype
+const child41 = new Child4()
+const child42 = new Child4()
+
+// ⑤组合继承优化二
+function Parent5() {
+  this.parent5 = 'parent5'
+  this.arr = [1, 2, 3]
+}
+
+function Child5() {
+  Parent5.call(this)
+  this.child5 = 'child5'
+}
+
+Child5.prototype = Object.create(Parent5.prototype) // Object.create() 创建了一个中间对象，起到隔离子类和父类的作用。
+Child5.prototype.constructor = Child5
+const child51 = new Child5()
+const child52 = new Child5()
+```
+
+### 揭秘 ES6 继承之 Super
+
+#### constructor 中的 super
 
 ```js
 function Parent(props) {
@@ -7,7 +102,7 @@ function Parent(props) {
 
 class Child extends Parent {
   constructor() {
-    super()
+    super() // 这里
   }
 }
 
@@ -15,6 +110,8 @@ var child = new Child({a: 1})
 
 console.log(child.props) // undefined
 ```
+
+为什么这里 child.props 会输出 undefined 呢，让我们接着看以下两个例子。
 
 ```js
 function Parent(props) {
@@ -46,7 +143,13 @@ var child = new Child({a: 1})
 console.log(child.props) // {a: 1}
 ```
 
-可以看到第二种情况和第三种情况是相等的。
+可以看到第二种情况和第三种情况是相等的。继承中，当子类没有写 constructor 时，它会自动加上如下代码：
+
+```js
+constructor(props) {
+  super(props)
+}
+```
 
 简单作个结论：当 ES6 的类函数中有 constructor 和 super 时，它们后面必须得跟个参数 props(名字随意)，否则原型链上的对象无法获取到相应属性。
 
@@ -64,3 +167,30 @@ function Child(props) {
 Child.prototype = new Parent()
 var child = new Child({a: 1})
 ```
+
+#### 作为对象调用的 super
+
+在下面的案例中，super 作为对象调用，那么它指向什么呢？
+
+```js
+class Parent {
+  parentFn() {
+    console.log('I am parentFn')
+  }
+}
+
+class Child extends Parent {
+  childFn() {
+    console.log(super.constructor)
+    super.parentFn()
+  }
+}
+
+var child = new Child()
+child.childFn()
+
+// Class Parent { ... }
+// I am parentFn
+```
+
+打印结果已经作出了回答。super 在作为对象调用时，它指向了父类对象的实例。
