--- a/BasicSkill/从0到1实现React/2.组件和state|props.md
+++ b/BasicSkill/从0到1实现React/2.组件和state|props.md
@@ -220,6 +220,67 @@ ReactDOM.render(
 
 至此，我们实现了 props 和 state 部分的逻辑。
 
+### forceUpdate 的实现
+
+> 声明：这部分为补充章节，可以选择性阅读。涉及到后文[生命周期](https://github.com/MuYunyun/blog/blob/master/BasicSkill/从0到1实现React/3.生命周期.md)、[setState](https://github.com/MuYunyun/blog/blob/master/BasicSkill/从0到1实现React/5.setState.md) 章节的知识点。
+
+当没有使用 setState 更新 state 状态时，通常要结合 forceUpdate 一起使用，例子如下：
+
+```js
+class B extends Component {
+  constructor(props) {
+    super(props)
+    this.state = {
+      count: {
+        value: 1
+      }
+    }
+  }
+
+  shouldComponentUpdate() { // 当使用 forceUpdate() 时，shouldComponentUpdate() 会失效
+    return false
+  }
+
+  click() {
+    this.state.count.value = ++this.state.count.value // 没有使用 setState 更新 state 状态时，通常要结合 forceUpdate 一起使用
+    this.forceUpdate()
+  }
+
+  render() {
+    return (
+      <div>
+        <button onClick={this.click.bind(this)}>Click Me!</button>
+        <div>{this.state.count.value}</div>
+      </div>
+    )
+  }
+}
+```
+
+这里要注意一个点`当使用 forceUpdate() 时，shouldComponentUpdate() 会失效`，下面我们来补充 forceUpdate() 的代码逻辑：
+
+```js
+// force to update
+Component.prototype.forceUpdate = function(cb) {
+  this.allowShouldComponentUpdate = false // 不允许 allowShouldComponentUpdate 执行
+  asyncRender({}, this, cb)
+}
+```
+
+相应的在 render.js 中加上 allowShouldComponentUpdate 的判断条件：
+
+```js
+function renderComponent(component) {
+  if (component.base && component.shouldComponentUpdate && component.allowShouldComponentUpdate !== false) { // 加上 allowShouldComponentUpdate 的判断条件
+    const bool = component.shouldComponentUpdate(component.props, component.state)
+    if (!bool && bool !== undefined) {
+      return false // shouldComponentUpdate() 返回 false，则生命周期终止
+    }
+  }
+  ...
+}
+```
+
 ### 小结
 
 组件即函数；当 JSX 中是自定义组件时，经过 babel 转化后的 React.createElement(fn, ..) 后中的第一个参数变为了函数，除此之外其它逻辑与 JSX 中为 html 元素的时候相同；
