docs: add HOC探索

--- a/BasicSkill/从0到1实现React/8.HOC探索.md
+++ b/BasicSkill/从0到1实现React/8.HOC探索.md
@@ -14,14 +14,14 @@ y = f(x),
 
 `f()` 的实现有两种方法，下面进行实践。
 
-#### Property Proxy
+#### 属性代理(Props Proxy)
 
 这类实现也是装饰器模式的一种运用，通过装饰器函数给原来函数赋能。下面例子在装饰器函数中给被装饰的组件传递了额外的属性 { a: 1, b: 2 }。
 
 > 声明：下文所展示的 demo 均已在 [cpreact](https://github.com/MuYunyun/cpreact) 测试通过
 
 ```js
-function ppDecorate(WrappedComponent) {
+function ppHOC(WrappedComponent) {
   return class extends Component {
 
     render() {
@@ -33,7 +33,7 @@ function ppDecorate(WrappedComponent) {
   }
 }
 
-@ppDecorate
+@ppHOC
 class B extends Component {
   render() {
     return (
@@ -100,9 +100,41 @@ class B extends Component {
 
 顺带一提在这个 demo 中似乎看到了双向绑定的效果，但是实际中 React 并没有双向绑定的概念，但是我们可以运用 HOC 的知识点结合 setState 在 React 表单中实现伪双向绑定的效果。
 
-#### 继承反转
+#### 继承反转(Inheritance Inversion)
 
+继承反转的核心是：传入 HOC 的组件会作为返回类的父类来使用。然后在 render 中调用 `super.render()` 来调用父类的 render 方法。
 
+> 在 [《ES6 继承与 ES5 继承的差异》](https://github.com/MuYunyun/blog/blob/master/BasicSkill/readES6/继承.md#作为对象调用的-super)中我们提到了作为对象使用的 super 指向父类的实例。
+
+```js
+function iiHOC(WrappedComponent) {
+  return class extends WrappedComponent {
+    render() {
+      const parentRender = super.render()
+      if (parentRender.nodeName === 'span') {
+        return (
+          <span>继承反转</span>
+        )
+      }
+    }
+  }
+}
+
+@iiHOC
+class B extends Component {
+  render() {
+    return (
+      <span>Inheritance Inversion</span>
+    )
+  }
+}
+```
+
+在这个 demo 中，在 HOC 内实现了渲染劫持，页面上最终显示如下：
+
+![](http://oqhtscus0.bkt.clouddn.com/e7dbedcefd9a61dcd12fbcff89dc19ef.jpg-200)
+
+> 可能会有疑惑，使用`属性代理`的方式貌似也能实现渲染劫持呀，但是那样做没有`继承反转`这种方式纯粹。
 
 ### 相关文章
 
