docs: adjust the directory

--- a/从0到1实现React/8.HOC探索.md
+++ b/从0到1实现React/8.HOC探索.md
@@ -136,7 +136,7 @@ class B extends Component {
 
 > 可能会有疑惑，使用`属性代理`的方式貌似也能实现渲染劫持呀，但是那样做没有`继承反转`这种方式纯粹。
 
-### 相关文章
+### 相关链接
 
 * [带着三个问题深入浅出React高阶组件](https://juejin.im/post/59818a485188255694568ff2)
 * [深入理解 React 高阶组件](https://zhuanlan.zhihu.com/p/24776678?refer=FrontendMagazine)
