--- a/BasicSkill/设计模式/装饰者模式.md
+++ b/BasicSkill/设计模式/装饰者模式.md
@@ -41,8 +41,8 @@ wear()
 Function.prototype.before = function(fn) {
   const self = this
   return function() {
-    fn.apply(this, arguments)
-    return self.apply(this, arguments)
+    fn.apply(self, arguments)
+    return self.apply(self, arguments)
   }
 }
 
@@ -50,8 +50,8 @@ Function.prototype.before = function(fn) {
 Function.prototype.after = function(fn) {
   const self = this
   return function() {
-    self.apply(this, arguments)
-    return fn.apply(this, arguments)
+    self.apply(self, arguments)
+    return fn.apply(self, arguments)
   }
 }
 ```
