--- a/BasicSkill/番外篇/函数式编程.md
+++ b/BasicSkill/番外篇/函数式编程.md
@@ -2,6 +2,6 @@
 
 函数式编程是一种思想。
 
-* pure function/ Immutable，纯函数中不进行改变共享的状态，只进行数据的处理。
-
-* 目前所知的 map/filter, redux 中的 compose 也可归类于函数式编程。
+* 使用纯函数：纯函数中不改变状态，只进行数据的处理;
+* 函数柯里化：将接受多个入参的函数转化为接受一个入参的函数;
+* 目前所知的 map/filter, redux 中的 compose 也可归类于函数式编程;
