docs: 观察者模式(proxy实现)

--- a/BasicSkill/readES6/扩展运算符.md
+++ b/BasicSkill/readES6/扩展运算符.md
@@ -63,6 +63,16 @@ const cpArr = [...arr]
 cpArr // [1, 2, 3]
 ```
 
+> 下面这种写法也是浅拷贝的变种：
+
+```js
+const arr = [1, 2, 3]
+const cpArr = []
+
+cpArr.push(...arr)
+cpArr // [1, 2, 3]l
+```
+
 因为这个特性，我们还可以合并数组，如下所示：
 
 ```js
