docs: onChange事件的那点事

--- a/从0到1实现React/0.前置准备.md
+++ b/从0到1实现React/0.前置准备.md
@@ -1,6 +1,6 @@
 ### 前置准备
 
-看源码一个痛处是会陷进理不顺主干的困局中，本系列文章在实现一个 (x)react 的同时理顺 React 框架的主干内容(JSX/虚拟DOM/...)
+本系列文章在实现一个 cpreact 的同时帮助大家理顺 React 框架的核心内容(JSX/虚拟DOM/组件/生命周期/diff算法/setState/PureComponent/HOC/...) [项目地址](https://github.com/MuYunyun/cpreact)
 
 ### 环境准备
 
