--- a/从0到1实现React/2.组件和state|props.md
+++ b/从0到1实现React/2.组件和state|props.md
@@ -116,7 +116,7 @@ function render(vdom, container) {
 }
 ```
 
-实现完组件间 props 的传递后，再来聊聊 state，在 react 中是通过 setState 来完成组件状态的改变的，后续章节会对这个 api（异步）深入探究，这里简单实现如下：
+实现完组件间 props 的传递后，再来聊聊 state，在 react 中是通过 setState 来完成组件状态的改变的，在后面的 [setState 优化](https://github.com/MuYunyun/blog/blob/master/从0到1实现React/5.setState.md) 中会实现 setState 的异步逻辑，此处简单实现如下：
 
 ```js
 function Component(props) {
