--- a/从0到1实现React/8.HOC探索.md
+++ b/从0到1实现React/8.HOC探索.md
@@ -96,7 +96,7 @@ class B extends Component {
 
 ![](http://oqhtscus0.bkt.clouddn.com/hoc%E6%8E%A2%E7%B4%A2%E4%B9%8B%E5%8F%97%E6%8E%A7%E7%BB%84%E4%BB%B6.gif)
 
-这里有个坑点，当我们在输入框输入字符的时候，并不会立马触发 onChange 事件(我们想要让事件立即触发，然而现在要按下回车键或者点下鼠标才触发)，在 react 中有个[合成事件](https://reactjs.org/docs/events.html) 的知识点，下篇文章会进行探究。
+这里有个坑点，当我们在输入框输入字符的时候，并不会立马触发 onChange 事件(我们想要让事件立即触发，然而现在要按下回车键或者点下鼠标才触发)，在 react 中有个[合成事件](https://reactjs.org/docs/events.html) 的知识点，下篇文章 [onChange 事件](https://github.com/MuYunyun/blog/blob/master/从0到1实现React/9.onChange事件的那点事.md) 对 react 中的 onChange 事件为何和原生 DOM 事件中的 onchange 表现不一致进行揭秘。
 
 顺带一提在这个 demo 中似乎看到了双向绑定的效果，但是实际中 React 并没有双向绑定的概念，但是我们可以运用 HOC 的知识点结合 setState 在 React 表单中实现伪双向绑定的效果。
 
