docs: adjust directory

--- a/BasicSkill/readES6/模块.md
+++ b/BasicSkill/readES6/模块.md
@@ -1,27 +1,73 @@
-模块相关
+### CommonJS 模块与 ES6 模块间的差异
 
-> commonjs 规范
+#### 写法上的差异
+
+CommonJS 中常见导出和引人写法如下：
 
 ```js
 // 导出
 module.exports = a
 
 // 引人
-const a = require('...')
+const a = require('./xxx')
 ```
 
-> es6 模块
+ES6 中常见导出和引人写法如下：
 
 ```js
 // 导出
-export default a        // webpack 编译成 es5 exports.default = a
+export default a          // webpack 编译成 es5 exports.default = a
 
 // 引人
-import a from '...'     // webpack 编译成 es5 require('...').default
+import a from './xxx'     // webpack 编译成 es5 require('...').default
 
 // 导出
-export { a }            // webpack 编译成 es5 exports.a = a
+export { a }              // webpack 编译成 es5 exports.a = a
 
 // 引人
-import { a } from '...' // webpack 编译成 es5 require('...').a
+import { a } from './xxx' // webpack 编译成 es5 require('...').a
+```
+
+#### 加载机制的差异
+
+在 CommonJS 的模块中，require 是动态(运行时)加载的；在 ES6 的模块中，import 是静态(编译时)加载的。
+
+> ES6 [import() 动态加载的提案](https://github.com/tc39/proposal-dynamic-import) 目前已到第 3 阶段。
+
+#### 获取模块的差异
+
+在 CommonJS 中，获取的是一个值/模块的拷贝，见如下例子：
+
+```js
+// test2.js
+let a = 1
+
+function add() {
+	a = 2
+}
+
+module.exports = { a, add }
+
+// test.js
+const { a, add } = require('./test2')
+
+console.log(a)
+add()
+console.log(a)
+
+// 执行 node test.js，输出结果为 1 1
+```
+
+在 ES6 中，获取的是一个值/模块的引用，见如下例子：
+
+```js
+
+```
+
+### todo
+
+研究
+
+```js
+Object.defineProperty(exports, "__esModule", { value: true });
 ```
