docs: CommonJS 模块与 ES6 模块间的差异

--- a/BasicSkill/readES6/模块.md
+++ b/BasicSkill/readES6/模块.md
@@ -16,16 +16,16 @@ ES6 中常见导出和引人写法如下：
 
 ```js
 // 导出
-export default a          // webpack 编译成 es5 exports.default = a
+export default a          // 编译成 CommonJS: exports.default = a
 
 // 引人
-import a from './xxx'     // webpack 编译成 es5 require('...').default
+import a from './xxx'     // 编译成 CommonJS: require('./xxx').default
 
 // 导出
-export { a }              // webpack 编译成 es5 exports.a = a
+export { a }              // 编译成 CommonJS: exports.a = a
 
 // 引人
-import { a } from './xxx' // webpack 编译成 es5 require('...').a
+import { a } from './xxx' // 编译成 CommonJS: require('./xxx').a
 ```
 
 #### 加载机制的差异
@@ -34,12 +34,14 @@ import { a } from './xxx' // webpack 编译成 es5 require('...').a
 
 > ES6 [import() 动态加载的提案](https://github.com/tc39/proposal-dynamic-import) 目前已到第 3 阶段。
 
+> 另外如果是使用 TypeScript 的话，编译成 JavaScript 的代码后再用上述结论。
+
 #### 获取模块的差异
 
 在 CommonJS 中，获取的是一个值/模块的拷贝，见如下例子：
 
 ```js
-// test2.js
+// test.js
 let a = 1
 
 function add() {
@@ -48,26 +50,36 @@ function add() {
 
 module.exports = { a, add }
 
-// test.js
-const { a, add } = require('./test2')
+// test2.js
+const { a, add } = require('./test')
 
 console.log(a)
 add()
 console.log(a)
 
-// 执行 node test.js，输出结果为 1 1
+// 执行 node test2.js，输出结果为 1 1
 ```
 
 在 ES6 中，获取的是一个值/模块的引用，见如下例子：
 
 ```js
+// test.js
+let a = 1
 
-```
+function add() {
+	a = 2
+}
 
-### todo
+export { a, add }
 
-研究
+// index.html
+import { a, add } from './index.js'
 
-```js
-Object.defineProperty(exports, "__esModule", { value: true });
+console.log(a)
+
+add()
+
+console.log(a)
+
+// 在浏览器中输出结果为 1 2
 ```
