docs: leetcode daily

--- a/BasicSkill/readES6/模块.md
+++ b/BasicSkill/readES6/模块.md
@@ -16,7 +16,7 @@ ES6 中常见导出和引人写法如下：
 
 ```js
 // 导出
-export default a          // 编译成 CommonJS: exports.default = a
+export default a          // 编译成 CommonJS: exports.default = a (ES 编译成的 CommonJS 形式)
 
 // 引人
 import a from './xxx'     // 编译成 CommonJS: require('./xxx').default
