docs: leetcode daily

--- a/从0到1实现React/1.JSX和虚拟DOM.md
+++ b/从0到1实现React/1.JSX和虚拟DOM.md
@@ -10,6 +10,8 @@ const element = (
 
 JSX 是一种语法糖，经过 [babel](https://babeljs.io/en/repl) 转换结果如下，可以发现实际上转化成 `React.createElement()` 的形式：
 
+> 扩展：[babel执行机制](https://github.com/MuYunyun/blog/blob/master/BasicSkill/番外篇/babel执行机制.md)
+
 ```js
 var element = React.createElement(
   "div",
