--- a/BasicSkill/readES6/扩展运算符.md
+++ b/BasicSkill/readES6/扩展运算符.md
@@ -47,9 +47,12 @@ cpObj.b // undefined
 ```js
 const obj = { a: 1, b: 2, c: 3 }
 const { a, ...x } = obj
+const { a: data } = obj // 重命名
 
 a // 1
-b // { b: 2, c: 3 }
+x // { b: 2, c: 3 }
+
+data // 1
 ```
 
 ### 数组中的扩展运算符
