--- a/从0到1实现React/0.前置准备.md
+++ b/从0到1实现React/0.前置准备.md
@@ -1,12 +1,12 @@
 ### 前置准备
 
-本系列文章在实现一个 cpreact 的同时帮助大家理顺 React 框架的核心内容(JSX/虚拟DOM/组件/生命周期/diff算法/setState/PureComponent/HOC/...) [项目地址](https://github.com/MuYunyun/cpreact)
+本系列文章在实现 cpreact 的同时理顺 React 框架的核心内容(JSX/虚拟DOM/组件/生命周期/diff算法/setState/PureComponent/HOC/onChange事件) [项目地址](https://github.com/MuYunyun/cpreact)
 
 ### 环境准备
 
-项目打包工具选择了 parcel，使用其可以快速地进入项目开发的状态。[快速开始](https://parceljs.org/getting_started.html)
+首先安装以下 babel 模块，其具体作用会在后文 [JSX 和 虚拟 DOM](https://github.com/MuYunyun/blog/blob/master/从0到1实现React/1.JSX和虚拟DOM.md) 中提及。
 
-此外需要安装以下 babel 插件：
+> 扩展延伸：[babel 执行机制](https://github.com/MuYunyun/blog/blob/master/BasicSkill/番外篇/babel执行机制.md)
 
 ```js
 "babel-core": "^6.26.0",
@@ -28,8 +28,65 @@
 }
 ```
 
-### 项目说明
 
-该系列文章会尽可能的分析项目细节，具体的还是以项目实际代码为准。
+配置好 babel 后，接着提供两套打包工具的配置方案，读者可以自行选择。
 
-[项目地址](https://github.com/MuYunyun/cpreact)
+#### 方案一：使用 parcel
+
+[parcel](https://parceljs.org/getting_started.html) 是一款上手极快的打包工具，使用其可以快速地进入项目开发的状态。在 `package.json` 加上如下配置，具体可以参照 [0.1 版本](https://github.com/MuYunyun/cpreact/blob/0.1/package.json)
+
+```
+"scripts": {
+  "start": "parcel ./index.html --open -p 8080 --no-cache"
+},
+```
+
+#### 方案二：使用 webpack
+
+webpack 拥有一个活跃的社区，提供了更为丰富的打包能力。
+
+首先安装以下模块：
+
+```
+"webpack": "^4.17.2",
+"webpack-cli": "^3.1.0",
+"webpack-dev-server": "^3.1.8"
+```
+
+在根目录的 `webpack.config.js` 配置如下：
+
+```js
+const webpack = require('webpack')
+const path = require('path')
+const rootPath = path.resolve(__dirname)
+
+module.exports = {
+  entry: path.resolve(rootPath, 'test', 'index.js'),
+  mode: 'development',
+  devtool: 'inline-source-map',
+  devServer: {
+    contentBase: './dist'
+  },
+  output: {
+    filename: 'cpreact.js',
+    path: path.resolve(rootPath, 'dist'),
+    libraryTarget: 'umd'
+  },
+  module: {
+    rules: [{
+      test: /\.js$/,
+      loader: "babel-loader",
+    }]
+  },
+}
+```
+
+然后在 `package.json` 里加上如下配置：
+
+```
+"scripts": {
+  "start": "webpack-dev-server --open",
+},
+```
+
+具体可以参照 [0.4.3 版本](https://github.com/MuYunyun/cpreact/blob/master/webpack.config.js)
