--- a/从0到1实现React/3.生命周期.md
+++ b/从0到1实现React/3.生命周期.md
@@ -149,3 +149,20 @@ componentWillUpdate
 render
 componentDidUpdate
 ```
+
+### React 16.3 生命周期调研
+
+在这个版本中，新加入了两个生命周期：
+
+```
+getDerivedStateFromProps(nextProps, prevState): 更加语义化，可以代替 componentWillMount、componentWillReceiveProps(nextProps);
+
+getSnapshotBeforeUpdate(prevProps, prevState): 可以将结果传入 componentDidUpdate 里，从而达到数据统一，可以替代 componentWillUpdate()（缺点就是前面讲的异步渲染，componentWillUpdate() 与 componentDidUpdate() 间数据会不统一）
+```
+
+后文考虑实现上述 api。
+
+React 16.3 生命周期相关文献
+
+* [React v16.3 版本新生命周期函数浅析及升级方案](https://zhuanlan.zhihu.com/p/36062486)
+* [中文官方文档](https://react.docschina.org/docs/react-component.html)
