--- a/BasicSkill/番外篇/他山之石可以攻玉.md
+++ b/BasicSkill/番外篇/他山之石可以攻玉.md
@@ -2,7 +2,7 @@
 
 收集他人已经整理好对自己有用的知识点
 
-[数组方法总结](http://yuren.space/blog/2017/01/15/array-function/#pop): 罗列方法返回值是什么，会不会对原始数组造成影响
+[数组方法总结](https://segmentfault.com/a/1190000008147878#articleHeader17): 罗列方法返回值是什么，会不会对原始数组造成影响
 
 ### 如何维护一个开源项目
 
