--- a/BasicSkill/番外篇/函数式编程.md
+++ b/BasicSkill/番外篇/函数式编程.md
@@ -1,7 +1,86 @@
+### 命令式编程和声明式编程
+
+拿泡茶这个事例来区分下命令式编程和声明式编程
+
+* 命令式编程
+
+1.烧开水(为第一人称)
+2.拿个茶杯
+3.放茶叶
+4.冲水
+
+* 声明式编程
+
+1.给我泡杯茶(为第二人称)
+
+举个 demo
+
+```js
+// 命令式编程
+const convert = function(arr) {
+  const result = []
+  for (let i = 0; i < arr.length; i++) {
+    result[i] = arr[i].toLowerCase()
+  }
+  return result
+}
+
+// 声明式编程
+const convert = function(arr) {
+  return arr.map(r => r.toLowerCase())
+}
+```
+
 ### 函数式编程
 
-函数式编程是一种思想。
+函数式编程是声明式编程的范式。
 
-* 使用纯函数：纯函数中不改变状态，只进行数据的处理;
-* 函数柯里化：将接受多个入参的函数转化为接受一个入参的函数;
-* 目前所知的 map/filter, redux 中的 compose 也可归类于函数式编程;
+* 纯粹性：纯函数不改变除当前作用域以外的值;
+
+```js
+// 反面示例
+let a = 0
+const add = (b) => a = a + b // 两次 add(1) 结果不一致
+
+// 正确示例
+const add = (a, b) => a + b
+```
+
+* 数据不可变性: Immutable
+
+```js
+// 反面示例
+const arr = [1, 2]
+const arrAdd = (value) => {
+  arr.push(value)
+  return arr
+}
+
+add(3) // [1, 2, 3]
+add(3) // [1, 2, 3, 3]
+
+// 正面示例
+const arr = [1, 2]
+const arrAdd = (value) => {
+  return arr.concat(value)
+}
+
+add(3) // [1, 2, 3]
+add(3) // [1, 2, 3]
+```
+
+* 函数柯里化：将多个入参的函数转化为一个入参的函数;
+
+```js
+const add = a => b => a + b
+add(1)(2)
+```
+
+* 可组合：函数之间能组合使用
+
+```js
+const add = (x) => x + x
+const mult = (x) => x * x
+
+const addAndMult = (x) => add(mult(x))
+```
