--- a/从0到1实现React/9.onChange事件以及受控组件.md
+++ b/从0到1实现React/9.onChange事件以及受控组件.md
@@ -70,29 +70,57 @@ const case3 = () => <input value={123} />        // 此时输入框内显示 123
 
 ![](http://oqhtscus0.bkt.clouddn.com/0fa301946b3f4bf315d742735c333562.jpg-200)
 
-首先想到了 html 自带属性 readonly、disable，它们都能禁止用户的输入，但是它们不能满足获取焦点这个条件。结合前文 `onChange` 的实现是监听 `input` 事件，若传入属性没有 `onChange` 事件，那么创造一个抹掉用户输入的 `input` 事件。代码实现如下：
+首先想到了 html 自带属性 readonly、disable，它们都能禁止用户的输入，但是它们不能满足获取焦点这个条件。结合前文 `onChange` 的实现是监听 `input` 事件，代码分为以下两种情况：
+
+1.dom 节点包含 `value` 属性、`onChange` 属性
+2.dom 节点包含 `value` 属性，不包含 `onChange` 属性
+
+代码如下：
 
 ```js
-function setAttribute(dom, attr, value) {
+function vdomToDom(vdom) {
   ...
-  else if (attr.match(/on\w+/)) {        // 处理事件的属性:
-    let eventName = attr.toLowerCase().substr(2)
-    if (eventName === 'change') { eventName = 'input' } // 和现阶段的 react 统一
-    dom.addEventListener(eventName, value)
-  } else if (attr === 'value') {    // 受控组件逻辑
-    dom.setAttribute(attr, value)
-    const oldValue = dom.value
+  if (vdom.attributes
+    && vdom.attributes.hasOwnProperty('onChange')
+    && vdom.attributes.hasOwnProperty('value')) { // 受控组件逻辑
+      ...
+      dom.addEventListener('input', (e) => {
+        changeCb.call(this, e)
+        dom.value = oldValue
+      })
+      ...
+    }
+  if (vdom.attributes
+    && !vdom.attributes.hasOwnProperty('onChange')
+    && vdom.attributes.hasOwnProperty('value')) { // 受控组件逻辑
+    ...
     dom.addEventListener('input', (e) => {
-      dom.value = oldValue         // 关键语句
+      dom.value = oldValue
     })
+    ...
   }
   ...
 }
 ```
 
-![](http://oqhtscus0.bkt.clouddn.com/353c8119b3c60a7f8f7696633c97ad28.jpg-200)
+可以发现它们的核心都在这段代码上：
 
-但是此时要是执行如下代码这样使用 `<input value={this.state.num} onChange={this.change} />` 就会发现新问题。观察上述代码逻辑，此时给 `input 标签` 绑定了两个 `input 监听事件`(先绑定的先执行)，这样会发生什么呢？
+```js
+dom.addEventListener('input', (e) => {
+  changeCb.call(this, e)
+  dom.value = oldValue
+})
+```
+
+区别是当有 `onChange 属性` 时，能提供相应的回调函数 `changeCb` 通过事件循环机制改变表单的值。看如下两个例子的比较：
+
+```js
+const App = () => <input value={123} />
+```
+
+效果如下：
+
+![](http://oqhtscus0.bkt.clouddn.com/353c8119b3c60a7f8f7696633c97ad28.jpg-200)
 
 ```js
 class App extends Component {
@@ -103,7 +131,6 @@ class App extends Component {
   }
 
   change(e) {
-    console.log(e.target.value) // 会一直输出 123
     this.setState({
       num: e.target.value
     })
@@ -119,26 +146,10 @@ class App extends Component {
 }
 ```
 
-由于此时先执行 `value 属性` 的 `input 事件`，致使执行 `onChange 属性` 的 `input 事件` 时，其传参的 `e.target.value` 仍然是 oldValue。
+这段代码中的 `change` 函数即上个段落所谓的 `changeCb` 函数，通过 `setState` 的事件循环机制改变表单的值。
 
-其实只要让 `onChange` 的 input 事件绑定优先于 `value` 的 input 事件绑定就行。
+效果如下：
 
-```js
-function vdomToDom(vdom) {
-  ...
-  if (vdom.attributes
-    && vdom.attributes.hasOwnProperty('onChange')
-    && vdom.attributes.hasOwnProperty('value')) { // 受控组件，`onChange` 的 input 事件绑定优先于 `value` 的 input 事件绑定
-      setAttribute(dom, 'onChange', vdom.attributes['onChange'])
-      setAttribute(dom, 'value', vdom.attributes['value'])
-      delete vdom.attributes['onChange']
-      delete vdom.attributes['value']
-    }
-  for (const attr in vdom.attributes) {
-    setAttribute(dom, attr, vdom.attributes[attr])
-  }
-  ...
-}
-```
+![](http://oqhtscus0.bkt.clouddn.com/aec70ef0cebf603a0871d61f21e93532.gif)
 
-// 未完待续
+至此，模拟了受控组件的实现。
