--- a/从0到1实现React/15.函数子组件探索.md
+++ b/从0到1实现React/15.函数子组件探索.md
@@ -3,6 +3,7 @@
 使用方式如下，页面渲染出 hello，cpreact，至于是否实现先观望一段时间
 
 ```js
+// 父组件
 function App() {
   return (
     <Child>
@@ -11,5 +12,6 @@ function App() {
   )
 }
 
+// 子组件
 const Child = ({ children }) => children()
 ```
