--- a/从0到1实现React/9.onChange事件以及受控组件.md
+++ b/从0到1实现React/9.onChange事件以及受控组件.md
@@ -21,6 +21,8 @@ class App extends Component {
   }
 }
 
+/*--------------分割线---------------*/
+
 // 原生 DOM 事件中的 onchange 事件：<input id='test'>
 document.getElementById('test').addEventListener('change', (e) => {
   console.log('键盘松开以后还需按下回车键或者点下鼠标才会触发')
@@ -29,7 +31,7 @@ document.getElementById('test').addEventListener('change', (e) => {
 
 ### 拨云见雾
 
-我们来看下 React 最新的一个 issue [React Fire: Modernizing React DOM](https://github.com/facebook/react/issues/13525)。有两点信息和这篇文章的话题相关。
+我们来看下 React 的一个 issue [React Fire: Modernizing React DOM](https://github.com/facebook/react/issues/13525)。有两点信息和这篇文章的话题相关。
 
 * Drastically simplify the event system
 * Migrate from onChange to onInput and don’t polyfill it for uncontrolled components
