--- a/从0到1实现React/3.生命周期.md
+++ b/从0到1实现React/3.生命周期.md
@@ -157,7 +157,7 @@ componentDidUpdate
 ```
 getDerivedStateFromProps(nextProps, prevState): 更加语义化，可以代替 componentWillMount、componentWillReceiveProps(nextProps);
 
-getSnapshotBeforeUpdate(prevProps, prevState): 可以将结果传入 componentDidUpdate 里，从而达到数据统一，可以替代 componentWillUpdate()（缺点就是前面讲的异步渲染，componentWillUpdate() 与 componentDidUpdate() 间数据会不统一）
+getSnapshotBeforeUpdate(prevProps, prevState): 可以将结果传入 componentDidUpdate 里，从而达到 dom 数据统一，可以替代 componentWillUpdate()（缺点就是前面讲的 react 开启异步渲染，componentWillUpdate() 与 componentDidUpdate() 间获取的 dom 会不统一）。
 ```
 
 后文考虑实现上述 api。
