docs: 在react使用immutable数据的优势

--- a/BasicSkill/JavaScript/二刷高程.md
+++ b/BasicSkill/JavaScript/二刷高程.md
@@ -6,7 +6,7 @@
 
 ### 重载
 
-JavaScript 没有函数重载，Java/C++ 中是有函数重载的(即相同函数名，但传的参数不同是当成不同函数的)
+Java/C++ 中是有函数重载的(即相同函数名，但传的参数不同是当成不同函数的),而 JavaScript 没有函数重载，旧其本质是因为 JavaScrit 中函数是一个对象。函数名类似一个指针。
 
 ### label 语句的用法
 
@@ -50,7 +50,7 @@ console.log(num) // 55
 
 #### 函数参数是'按值传递'的
 
-此处的按值传递和上面提到的按值访问是两个不一样的概念，此处指的是更改函数参数的引用是不会影响到原参数的。观察如下例子：
+此处的按值传递和上面提到的按值访问是两个不一样的概念，此处指的是给函数传入参数后，我们操作的是`复制参数后的值`。
 
 ①.当传入参数为基本类型时：
 
@@ -64,9 +64,13 @@ function add(num) {
 
 const result = add(count)
 
-console.log(count)  // 0 可以看到传入参数仍然是 0 没有受到影响
+console.log(count)  // 0 可以看到传入参数仍然是 0
 console.log(result) // 1
 ```
+
+当 count 作为参数传入函数 add 时，在栈内存中就会复制一份 count 的值，我们操作的其实是复制后的这个值。可用下图表示：
+
+![](http://oqhtscus0.bkt.clouddn.com/dae97b9a4ef1022ae56e9bf5b9c1c727.jpg-200)
 
 ②.当传入参数为引用类型时：
 
@@ -75,7 +79,7 @@ const reference = { num: 0 }
 
 function add(obj) {
   obj.num = 1
-  obj = new Object() // ①
+  obj = new Object() // ① 此处函数参数的引用发生改变
   obj.num = 2
   return obj
 }
@@ -86,6 +90,47 @@ console.log(reference) // { num: 1 }
 console.log(result)    // { num: 2 }
 ```
 
-注意 ① 处，此处函数参数的引用发生改变，后续对 obj 的操作对原参数不会产生影响。
+类似的，reference 作为参数传入函数 add 时，栈内存中会多出一个指向堆内存的值(类似 hash 值)。可用下图表示：
 
-### JavaScript 没有块级作用域
+![](http://oqhtscus0.bkt.clouddn.com/b12b36ce345d26881486de403b79cbee.jpg)
+
+当执行 `obj = new Object()` 实际上是更改了 hash2 的指向(hash1 的指向并没有发生变化)，所以更改函数参数的引用是不会影响到原参数的。
+
+### 函数声明和函数表达式
+
+* 注意它们的对应写法
+* 函数声明具有函数声明提升的概念(function decleration hoisting)
+
+```js
+// 函数声明
+function test() {}
+
+// 函数表达式
+const test = function() {}
+```
+
+### 属性类型
+
+大体针对 `Object.defineProperty()`、`Object.defineProperties` 这两个 api 来讲的。使用这两个 api 创建的对象里的数据类型和访问器类型默认为 false(Configuble、Enummerable、Writable) 以及 undefined(Value、Set、Get)。
+
+#### 数据类型
+
+* Configuble: 是否能 delete
+
+* Enummerable
+
+* Writable
+
+* Value
+
+#### 访问器类型
+
+* Configuble
+
+* Enummerable
+
+* Writable
+
+* Get
+
+* Set
