docs: 更新七牛云图床链接

--- a/BasicSkill/JavaScript/数组字符串方法小结——是否对原值有影响.md
+++ b/BasicSkill/JavaScript/数组字符串方法小结——是否对原值有影响.md
@@ -1,10 +1,8 @@
 > 本文主要罗列下常见数组/字符串的方法是否会对原数组/原字符串造成影响。
 
-### 数组方法
+### 不会对原数组有影响的方法
 
-#### slice()
-
-不会对原数组有影响。
+#### slice
 
 ```js
 var test = [1, 2, 3]
@@ -14,9 +12,19 @@ console.log(test)   // [1, 2, 3]
 console.log(result) // [1]
 ```
 
-### splice()
+#### concat
 
-对原数组有影响。
+```js
+var test = [1, 2, 3]
+var result = test.concat(4)
+
+console.log(test)   // [1, 2, 3]
+console.log(result) // [1, 2, 3, 4]
+```
+
+### 对原数组有影响的方法
+
+#### splice
 
 ```js
 var test = [1, 2, 3]
@@ -26,9 +34,7 @@ console.log(test)   // [2, 3]
 console.log(result) // [1]
 ```
 
-#### reverse()
-
-对原数组有影响。
+#### reverse
 
 ```js
 var test = [1, 2, 3]
@@ -38,11 +44,19 @@ console.log(test)   // [3, 2, 1]
 console.log(result) // [3, 2, 1]
 ```
 
-### 字符串方法
+#### push/pop/unshift/shift
 
-#### substr()/substring()/slice()
+```js
+var test = [1, 2, 3]
+var result = test.push(4)
 
-不会对原字符串造成影响。
+console.log(test)   // [1, 2, 3, 4]
+console.log(result) // 4
+```
+
+### 不会对原字符串造成影响的方法
+
+#### substr/substring/slice
 
 ```js
 // substr
