--- a/从0到1实现React/4.diff算法.md
+++ b/从0到1实现React/4.diff算法.md
@@ -32,7 +32,7 @@ function diff(oldDom, newVdom) {
 }
 ```
 
-下面根据不同比较类型实现相应逻辑。
+下面列出不同比较类型对应的逻辑实现。
 
 #### 对比文本节点
 
@@ -91,7 +91,14 @@ function diffComponent(oldDom, newVdom) {
 
 #### 遍历对比子节点
 
-遍历对比子节点的策略有两个：一是只比较同层级的节点，二是给节点加上 key 属性。它们的目的都是降低空间复杂度。代码如下：
+遍历对比子节点的策略如下：
+
+1. 比较新旧 dom 元素相同层级相同位置的节点类型，若节点类型不相等，则直接将新节点替换掉旧节点；
+2. 给节点加上 key 属性；
+
+> 在 cpreact 的代码实现中，1 的目的降低了空间复杂度(避免了更深层次的遍历)；2 的目的目前看来是少了一次新老类型的判断消耗。
+
+代码如下：
 
 ```js
 // 对比子节点
@@ -100,29 +107,39 @@ function diffChild(oldDom, newVdom) {
   const children = []
   const oldChildNodes = oldDom.childNodes
   for (let i = 0; i < oldChildNodes.length; i++) {
-    if (oldChildNodes[i].key) { // 将含有 key 的节点存进对象 keyed
+    if (oldChildNodes[i].key) {
       keyed[oldChildNodes[i].key] = oldChildNodes[i]
-    } else {                    // 将不含有 key 的节点存进数组 children
+    } else { // 如果不存在 key，则优先找到节点类型相同的元素
       children.push(oldChildNodes[i])
     }
   }
 
-  const newChildNodes = newVdom.children
-  let child
+  let newChildNodes = newVdom.children
+  if (isArray(newVdom.children[0])) { // https://github.com/MuYunyun/cpreact/issues/9
+    newChildNodes = newVdom.children[0]
+  }
+
   for (let i = 0; i < newChildNodes.length; i++) {
-    if (keyed[newChildNodes[i].key]) {  // 对应上面存在 key 的情形
+    let child = null
+    if (keyed[newChildNodes[i].key]) {
       child = keyed[newChildNodes[i].key]
       keyed[newChildNodes[i].key] = undefined
-    } else {                            // 对应上面不存在 key 的情形
-      for (let j = 0; j < children.length; j++) {
-        if (isSameNodeType(children[i], newChildNodes[i])) { // 如果不存在 key，则优先找到节点类型相同的元素
-          child = children[i]
-          children[i] = undefined
-          break
-        }
+    } else { // 对应上面不存在 key 的情形
+      // 在新老节点相同位置上寻找相同类型的节点进行比较；如果不满足上述条件则直接将新节点插入；
+      if (children[i] && isSameNodeType(children[i], newChildNodes[i])) {
+        child = children[i]
+        children[i] = undefined
+      } else if (children[i] && !isSameNodeType(children[i], newChildNodes[i])) { // 不是相同类型，直接替代掉
+        children[i].replaceWith(newChildNodes[i])
+        continue
       }
     }
-    diff(child, newChildNodes[i]) // 递归比较
+
+    const result = diff(child, newChildNodes[i])
+    // 如果 child 为 null
+    if (result === newChildNodes[i]) {
+      oldDom.appendChild(vdomToDom(result))
+    }
   }
 }
 ```
@@ -152,8 +169,8 @@ function setProps(component, attributes) {
 
 * 生命周期测试
 
-![](http://oqhtscus0.bkt.clouddn.com/react%E7%94%9F%E5%91%BD%E5%91%A8%E6%9C%9F%E6%B5%8B%E8%AF%951.gif)
+![](http://muyy.withyoufriends.com/react%E7%94%9F%E5%91%BD%E5%91%A8%E6%9C%9F%E6%B5%8B%E8%AF%951.gif)
 
 * diff 测试
 
-![](http://oqhtscus0.bkt.clouddn.com/%E7%94%9F%E5%91%BD%E5%91%A8%E6%9C%9Fdiff%E6%B5%8B%E8%AF%951.gif)
+![](http://muyy.withyoufriends.com/%E7%94%9F%E5%91%BD%E5%91%A8%E6%9C%9Fdiff%E6%B5%8B%E8%AF%951.gif)
