--- a/BasicSkill/readES6/继承.md
+++ b/BasicSkill/readES6/继承.md
@@ -1,33 +1,38 @@
 ### ES5 之继承
 
-* 构造函数继承：缺点是只能继承父类函数的方法和属性，而不能继承原型对象的方法和属性
-
-* 原型链继承：缺点是当在一个子类的实例上修改父类的属性和方法时，其它的子类也会受到影响。
-
-* 组合继承：优点是解决上述两个缺点，缺点是父类方法调用了两次，而且不能判断实例的构造函数是子类还是父类
-
-* 组合继承优化一：优点是解决了调用两次的问题，但是还存在一个缺点：不能判断实例的构造函数是子类还是父类
-
-* 组合继承优化二：解决了不能判断实例的构造函数是子类还是父类的问题
+#### 基于构造函数的继承
 
 ```js
-// ①构造函数继承
 function Parent1() {
   this.parent1 = 'parent1'
   this.arr = [1, 2, 3]
 }
 
-Parent1.prototype.walk = 'I can walk' // 这里的 walk 子类就获取不到
+Parent1.prototype.walk = 'I can walk'
 
 function Child1() {
-  Parent1.call(this) // 将父级函数的 this 指向子构造函数上去
+  Parent1.call(this)
   this.child1 = 'child1'
 }
 
 const child11 = new Child1()
 const child12 = new Child1()
 
-// ②原型链继承
+// 测试
+child11.parent1 // parent1
+child11.walk    // undefined
+
+child11.arr.push(4)
+child11.arr // [1, 2, 3, 4]
+child12.arr // [1, 2, 3]
+```
+
+优点：构造函数的属性具有唯一性(child11.arr 与 child12.arr)，可参考[二刷高程](https://github.com/MuYunyun/blog/blob/master/BasicSkill/JavaScript/二刷高程.md)
+缺点：只能继承父类函数的方法和属性，而不能继承原型对象的方法和属性
+
+#### 基于原型链的继承
+
+```js
 function Parent2() {
   this.parent2 = 'parent2'
   this.arr = [1, 2, 3]
@@ -44,26 +49,59 @@ Child2.prototype = new Parent2()
 const child21 = new Child2()
 const child22 = new Child2()
 
-// ③组合继承
+// 测试
+child21.parent2 // parent2
+child21.walk    // I can walk
+
+child21.arr.push(4)
+child21.arr // [1, 2, 3, 4]
+child22.arr // [1, 2, 3, 4]
+```
+
+优点：继承父类函数的方法和属性同时继承了原型对象的方法和属性
+缺点：当在一个子类的实例上修改父类的属性和方法时，其它的子类也会受到影响(相当于改变了子类原型链上的属性，可以参考[二刷高程](https://github.com/MuYunyun/blog/blob/master/BasicSkill/JavaScript/二刷高程.md)
+
+#### 组合继承
+
+```js
 function Parent3() {
   this.parent3 = 'parent3'
   this.arr = [1, 2, 3]
 }
+
+Parent3.prototype.walk = 'I can walk'
 
 function Child3() {
   Parent3.call(this)  // 这里执行第一次父类
   this.child3 = 'child3'
 }
 
- Child3.prototype = new Parent3() // 这里执行第二次父类，原型继承发现只要把父子的原型对象绑定起来就好，可以写成 Child3.prototype = new Parent3()>__proto__ 也正常
+Child3.prototype = new Parent3() // 这里执行第二次父类，原型继承发现只要把父子的原型对象绑定起来就好，可以写成 Child3.prototype = new Parent3()>__proto__ 也正常
 const child31 = new Child3()
 const child32 = new Child3()
 
-// ④组合继承优化一
+// 测试
+child31.parent3 // parent3
+child31.walk    // I can walk
+
+child31.arr.push(4)
+child31.arr // [1, 2, 3, 4]
+child32.arr // [1, 2, 3]
+```
+
+优点：结合了构造函数继承和原型链继承的优点
+
+缺点：父类方法调用了两次，而且不能判断实例的构造函数是子类还是父类
+
+#### 组合继承优化一
+
+```js
 function Parent4() {
   this.parent4 = 'parent4'
   this.arr = [1, 2, 3]
 }
+
+Parent4.prototype.walk = 'I can walk'
 
 function Child4() {
   Parent4.call(this)
@@ -74,11 +112,29 @@ Child4.prototype = Parent4.prototype
 const child41 = new Child4()
 const child42 = new Child4()
 
-// ⑤组合继承优化二
+// 测试
+child41.parent4 // parent4
+child41.walk    // I can walk
+
+child41.arr.push(4)
+child41.arr // [1, 2, 3, 4]
+child42.arr // [1, 2, 3]
+
+child41.constructor // Parent4
+```
+
+优点：解决了调用两次的问题
+缺点：不能判断实例的构造函数是子类还是父类(此时 child41、child42 的构造函数指向 Parent4)
+
+#### 组合继承优化二
+
+```js
 function Parent5() {
   this.parent5 = 'parent5'
   this.arr = [1, 2, 3]
 }
+
+Parent5.prototype.walk = 'I can walk'
 
 function Child5() {
   Parent5.call(this)
@@ -89,9 +145,23 @@ Child5.prototype = Object.create(Parent5.prototype) // Object.create() 创建了
 Child5.prototype.constructor = Child5
 const child51 = new Child5()
 const child52 = new Child5()
+
+// 测试
+child51.parent5 // parent5
+child51.walk    // I can walk
+
+child51.arr.push(4)
+child51.arr // [1, 2, 3, 4]
+child52.arr // [1, 2, 3]
+
+child51.constructor // Child5
 ```
 
-### 揭秘 ES6 继承之 Super
+> Object.create() 的作用：Object.create(Parent5.prototype) 相当于一个空对象 {}，这个空对象的 __proto__ 等于 Parent5.prototype，所以这时候我们修改 Child5.prototype.constructor 实际上是在空对象上加上 constructor 属性。
+
+优点：解决了不能判断实例的构造函数是子类还是父类的问题
+
+### 揭秘 ES6 继承之 super
 
 #### constructor 中的 super
 
