--- a/BasicSkill/readES6/继承.md
+++ b/BasicSkill/readES6/继承.md
@@ -61,6 +61,13 @@ child22.arr // [1, 2, 3, 4]
 优点：继承父类函数的方法和属性同时继承了原型对象的方法和属性
 缺点：当在一个子类的实例上修改父类的属性和方法时，其它的子类也会受到影响(相当于改变了子类原型链上的属性，可以参考[二刷高程](https://github.com/MuYunyun/blog/blob/master/BasicSkill/JavaScript/二刷高程.md)
 
+------ 补充 ------
+
+补充下 Object.create() 这个 api，也将它归类到基于原型链的继承。当继承的对象属性没变化时，可以使用它。
+
+优点：可以少写一个构造函数
+缺点：同上述基于原型链继承的缺点
+
 #### 组合继承
 
 ```js
