--- a/BasicSkill/基础篇/二刷高程.md
+++ b/BasicSkill/基础篇/二刷高程.md
@@ -41,7 +41,7 @@ console.log(num) // 55
 
 ### 函数声明和函数表达式
 
-* 注意它们的对应写法
+* 以 `function` 开头的是函数声明，不是以 `function` 开头的则是函数表达式
 * 函数声明具有函数声明提升的概念(function decleration hoisting)
 
 ```js
@@ -50,6 +50,9 @@ function test() {}
 
 // 函数表达式
 const test = function() {}
+
+// 函数表达式
+(function(){})()
 ```
 
 ### 属性类型
@@ -168,3 +171,54 @@ people2.habbit // ["reading"]
 ### 继承
 
 > [继承优化](https://github.com/MuYunyun/blog/blob/master/BasicSkill/readES6/继承.md)
+
+### const/let 出现的原因
+
+提到块级作用域可以联系到 'const/let 出现的原因' 或者 'var 的缺点'
+
+```js
+// 案例 1
+var a = 1
+var a
+
+a // 1
+
+------------
+
+// 案例 2
+var a = 1
+var a = 2
+
+a // 2
+```
+
+可以看到使用 var 并不会告知之前是否已经声明过该变量，案例 1 直接无视了后续的声明，案例 2 后续的声明覆盖了前面的声明，这样子使用起来便有些混乱了。这也是 const/let 出现的原因，const 专注案例 1 的情形，let 则专注案例 2 的情形。
+
+```js
+// 案例 1
+const a = 1
+const a
+
+// Uncaught SyntaxError: Missing initializer in const declaration
+
+------------
+
+// 案例 2
+let a = 1
+let a = 2
+
+a // 2
+```
+
+### 块级作用域
+
+关键字：匿名函数
+
+```js
+(function() {
+  // 块级作用域
+})()
+```
+
+因为没有引用指向匿名函数，所以执行完就可以垃圾回收，不造成内存浪费。
+
