--- a/BasicSkill/基础篇/二刷高程.md
+++ b/BasicSkill/基础篇/二刷高程.md
@@ -1,6 +1,8 @@
 ### 二刷高程
 
-> 目标：横扫脑子里空白的概念。
+> 理念：尽信书则不如无书
+
+> 目标：横扫脑子里空白的概念
 
 ### 重载
 
@@ -222,3 +224,4 @@ a // 2
 
 因为没有引用指向匿名函数，所以执行完就可以垃圾回收，不造成内存浪费。
 
+###
