--- a/BasicSkill/设计模式/观察者模式.md
+++ b/BasicSkill/设计模式/观察者模式.md
@@ -30,7 +30,7 @@ var obj = {
 }
 
 var proxy = new Proxy(obj, {
-  set: function(target, key, value, receiver) {
+  set: function(target, key, value, receiver) { // {value: 0}  "value"  1  Proxy {value: 0}
     console.log('调用相应函数')
     Reflect.set(target, key, value, receiver)
   }
