--- a/BasicSkill/readES6/装饰器.md
+++ b/BasicSkill/readES6/装饰器.md
@@ -8,14 +8,16 @@
 
 不过装饰器模式仍处于[第 2 阶段提案中](https://github.com/tc39/proposal-decorators)，使用它之前需要使用 babel 模块 `transform-decorators-legacy` 编译成 ES5 或 ES6。
 
-在 TypeScript 的 [lib.es5.d.ts](https://github.com/Microsoft/TypeScript/blob/c48662c891ce810f5627a0f6a8594049cccceeb5/lib/lib.es5.d.ts#L1291) 中，定义了 4 种不同装饰器的接口，其中装饰类以及装饰类方法的接口定义如下所示：
+在 TypeScript 的 [lib.es5.d.ts](https://github.com/Microsoft/TypeScript/blob/c48662c891ce810f5627a0f6a8594049cccceeb5/lib/lib.es5.d.ts#L1291) 中，定义了 4 种不同装饰器的接口：
 
 ```ts
 declare type ClassDecorator = <TFunction extends Function>(target: TFunction) => TFunction | void;
+declare type PropertyDecorator = (target: Object, propertyKey: string | symbol) => void;
 declare type MethodDecorator = <T>(target: Object, propertyKey: string | symbol, descriptor: TypedPropertyDescriptor<T>) => TypedPropertyDescriptor<T> | void;
+declare type ParameterDecorator = (target: Object, propertyKey: string | symbol, parameterIndex: number) => void;
 ```
 
-下面对这两种情况进行解析。
+下面对装饰类以及装饰类方法进行解析。
 
 ### 作用于类的装饰器
 
