docs: WeakMap vs Map

--- a/BasicSkill/algorithm/字典.md
+++ b/BasicSkill/algorithm/字典.md
@@ -56,3 +56,54 @@ Map.prototype.values = function() {
   return arr
 }
 ```
+
+### 创建一个 Map 对象
+
+```js
+// 方式一
+const map1 = new Map()
+map.set('a', 1)
+
+// 方式二
+const map2 = new Map([['a', 1]])
+```
+
+### Map 和 WeakMap 的区别
+
+Map 和 WeakMap 相差 Weak 这个单词，本质知识点是对对象的直接引用(WeakMap)。它这个点造成的差异整理如下：
+
+* Map 的 key 范围更广，WeakMap 的 key 只能为对象;
+* Map 的 key 可以枚举，WeakMap 的 key 不能枚举;
+* 垃圾回收相关，见如下例子;
+
+```js
+var map = new Map();
+var weakmap = new WeakMap();
+
+(function(){
+  var a = {x: 12}
+  var b = {y: 12}
+
+  map.set(a, 1)
+  weakmap.set(b, 2)
+})()
+```
+
+解析：在这个例子中，IIFE 执行完后，垃圾回收机制会回收常量 a, b。WeakMap 可以类比成直接对 b 的引用，Map 里可以类比成在其内部对 a 作了层拷贝。所以 map 依然保持着相应的 key 值的对象，而 weakmap 的 key 值的对象以被回收(这步认为是垃圾回收机制做的)。它们的差异如下图所示：
+
+```
+// map
+Map(1) {{…} => 1}
+  size: (...)
+  __proto__: Map
+  [[Entries]]: Array(1)
+    0: {Object => 1}
+      key: {x: 12}
+      value: 1
+
+// weakmap
+WeakMap {}
+  __proto__: WeakMap
+  [[Entries]]: Array(0)
+    length: 0
+```
