--- a/BasicSkill/algorithm/集合.md
+++ b/BasicSkill/algorithm/集合.md
@@ -96,3 +96,14 @@ function isSubset(arr1, arr2) {
   return bool
 }
 ```
+
+### 创建 Set 对象
+
+```js
+// 方法一
+const set1 = new Set()
+set.add(1)
+
+// 方法二
+const set2 = new Set([1])
+```
